--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
-node_modules
-build
-vendor
+/build/
+/vendor/
+/node_modules/
+yarn.lock
+composer.lock
+package-lock.json
+DOCKER_ENV
+docker_tag
+*.log
