--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "presstest-client-plugin",
   "version": "0.0.1",
   "description": "This plugin adds an admin page to allow site owners to setup and run various acceptance tests on their site.",
-  "main": "plugin.php",
+  "main": "index.js",
   "repository": "git@github.com:pie/presstest-client-plugin.git",
   "author": "The team at PIE <dev@pie.co.de>",
   "license": "GPL",
